--- a/integ-ecms/integ-ecms-social/pom.xml
+++ b/integ-ecms/integ-ecms-social/pom.xml
@@ -66,21 +66,21 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.exoplatform.portal</groupId>
+			<groupId>org.gatein.portal</groupId>
 			<artifactId>exo.portal.webui.core</artifactId>
-			<version>${org.exoplatform.portal.version}</version>
+			<version>${org.gatein.portal.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.exoplatform.portal</groupId>
+			<groupId>org.gatein.portal</groupId>
 			<artifactId>exo.portal.webui.eXo</artifactId>
-			<version>${org.exoplatform.portal.version}</version>
+			<version>${org.gatein.portal.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.exoplatform.portal</groupId>
+			<groupId>org.gatein.portal</groupId>
 			<artifactId>exo.portal.webui.portal</artifactId>
-			<version>${org.exoplatform.portal.version}</version>
+			<version>${org.gatein.portal.version}</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
