--- a/integ-social/integ-social-ecms/pom.xml
+++ b/integ-social/integ-social-ecms/pom.xml
@@ -87,30 +87,30 @@
     </dependency>
 
     <dependency>
-      <groupId>org.exoplatform.portal</groupId>
+      <groupId>org.gatein.portal</groupId>
       <artifactId>exo.portal.component.common</artifactId>
-      <version>${org.exoplatform.portal.version}</version>
+      <version>${org.gatein.portal.version}</version>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
-      <groupId>org.exoplatform.portal</groupId>
+      <groupId>org.gatein.portal</groupId>
       <artifactId>exo.portal.component.web.controller</artifactId>
-      <version>${org.exoplatform.portal.version}</version>
+      <version>${org.gatein.portal.version}</version>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
-      <groupId>org.exoplatform.portal</groupId>
+      <groupId>org.gatein.portal</groupId>
       <artifactId>exo.portal.webui.framework</artifactId>
-      <version>${org.exoplatform.portal.version}</version>
+      <version>${org.gatein.portal.version}</version>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
-      <groupId>org.exoplatform.portal</groupId>
+      <groupId>org.gatein.portal</groupId>
       <artifactId>exo.portal.webui.core</artifactId>
-      <version>${org.exoplatform.portal.version}</version>
+      <version>${org.gatein.portal.version}</version>
       <scope>provided</scope>
     </dependency>
 
