--- a/pom.xml
+++ b/pom.xml
@@ -21,19 +21,19 @@
     <!-- ********************* -->
     <!-- Dependencies versions -->
     <!-- ********************* -->
-    <org.exoplatform.portal.version>3.4.0.Final</org.exoplatform.portal.version>
+    <org.gatein.portal.version>3.5.0.Beta01</org.gatein.portal.version>
     <org.exoplatform.calendar.version>4.0.0.Alpha1-SNAPSHOT</org.exoplatform.calendar.version>
     <org.exoplatform.wiki.version>4.0.0.Alpha1-SNAPSHOT</org.exoplatform.wiki.version>
     <org.exoplatform.forum.version>4.0.0.Alpha1-SNAPSHOT</org.exoplatform.forum.version>
     <org.exoplatform.ecms.version>4.0.0.Alpha1-SNAPSHOT</org.exoplatform.ecms.version>
     <org.exoplatform.social.version>4.0.0.Alpha1-SNAPSHOT</org.exoplatform.social.version>
     <org.exoplatform.commons.version>4.0.0.Alpha1-SNAPSHOT</org.exoplatform.commons.version>
-    <org.exoplatform.kernel.version>2.3.9-GA-SNAPSHOT</org.exoplatform.kernel.version>
-    <org.exoplatform.jcr.version>1.14.9-GA-SNAPSHOT</org.exoplatform.jcr.version>
-    <org.exoplatform.core.version>2.4.9-GA-SNAPSHOT</org.exoplatform.core.version>
+    <org.exoplatform.kernel.version>2.4.0-CR1</org.exoplatform.kernel.version>
+    <org.exoplatform.jcr.version>1.15.0-CR1</org.exoplatform.jcr.version>
+    <org.exoplatform.core.version>2.5.0-CR1</org.exoplatform.core.version>
     <org.gatein.shindig.version>2.0.2-CP01</org.gatein.shindig.version>
-    <org.slf4j.version>1.5.8</org.slf4j.version>
-    <org.shindig.version>2.0.2-CP01</org.shindig.version>
+    <org.slf4j.version>1.6.1</org.slf4j.version>
+    <org.shindig.version>2.0.2.Final-gatein-2</org.shindig.version>
     <org.json.version>20070829</org.json.version>
     <javax.jcr.version>1.0</javax.jcr.version>
 
