--- a/integ-ecms/integ-ecms-social/pom.xml
+++ b/integ-ecms/integ-ecms-social/pom.xml
@@ -14,74 +14,114 @@
 		<dependency>
 			<groupId>org.exoplatform.social</groupId>
 			<artifactId>social-component-core</artifactId>
-			<version>${org.exoplatform.social.version}</version>
-			<scope>provided</scope>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.exoplatform.integration</groupId>
 			<artifactId>integ-social-ecms</artifactId>
-			<version>${project.version}</version>
-			<scope>provided</scope>
+			<scope>compile</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.exoplatform.social</groupId>
-			<artifactId>social-component-service</artifactId>
-			<version>${org.exoplatform.social.version}</version>
-			<scope>provided</scope>
-		</dependency>
+
 		<dependency>
 			<groupId>org.exoplatform.social</groupId>
 			<artifactId>social-component-webui</artifactId>
-			<version>${org.exoplatform.social.version}</version>
-			<scope>provided</scope>
+			<scope>compile</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.exoplatform.social</groupId>
-			<artifactId>social-component-common</artifactId>
-			<version>${org.exoplatform.social.version}</version>
-			<scope>provided</scope>
-		</dependency>
+
+		<!-- mvn dependency:analyze marks unused but build failed if remove -->
 		<dependency>
 			<groupId>org.gatein.shindig</groupId>
 			<artifactId>shindig-social-api</artifactId>
-			<version>${org.gatein.shindig.version}</version>
-			<scope>provided</scope>
+			<scope>compile</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.exoplatform.ecms</groupId>
 			<artifactId>ecms-core-services</artifactId>
-			<version>${org.exoplatform.ecms.version}</version>
-			<scope>provided</scope>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.exoplatform.ecms</groupId>
 			<artifactId>ecms-core-webui</artifactId>
-			<version>${org.exoplatform.ecms.version}</version>
-			<scope>provided</scope>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.exoplatform.commons</groupId>
 			<artifactId>commons-webui-ext</artifactId>
-			<version>${org.exoplatform.commons.version}</version>
-			<scope>provided</scope>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.exoplatform.portal</groupId>
 			<artifactId>exo.portal.webui.core</artifactId>
-			<version>${org.exoplatform.portal.version}</version>
-			<scope>provided</scope>
+			<scope>compile</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.exoplatform.portal</groupId>
-			<artifactId>exo.portal.webui.eXo</artifactId>
-			<version>${org.exoplatform.portal.version}</version>
-			<scope>provided</scope>
-		</dependency>
+
 		<dependency>
 			<groupId>org.exoplatform.portal</groupId>
 			<artifactId>exo.portal.webui.portal</artifactId>
-			<version>${org.exoplatform.portal.version}</version>
-			<scope>provided</scope>
+			<scope>compile</scope>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.exoplatform.kernel</groupId>
+			<artifactId>exo.kernel.commons</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.exoplatform.portal</groupId>
+			<artifactId>exo.portal.component.web.server</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.jcr</groupId>
+			<artifactId>jcr</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.exoplatform.portal</groupId>
+			<artifactId>exo.portal.component.common</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.exoplatform.core</groupId>
+			<artifactId>exo.core.component.security.core</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.exoplatform.portal</groupId>
+			<artifactId>exo.portal.webui.framework</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.exoplatform.kernel</groupId>
+			<artifactId>exo.kernel.component.common</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.exoplatform.jcr</groupId>
+			<artifactId>exo.jcr.component.ext</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.exoplatform.kernel</groupId>
+			<artifactId>exo.kernel.container</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.exoplatform.jcr</groupId>
+			<artifactId>exo.jcr.component.core</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.exoplatform.portal</groupId>
+			<artifactId>exo.portal.webui.portlet</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.portlet</groupId>
+			<artifactId>portlet-api</artifactId>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 	<build>
