--- a/pom.xml
+++ b/pom.xml
@@ -44,10 +44,242 @@
     <org.shindig.version>2.0.2-CP01</org.shindig.version>
     <org.json.version>20070829</org.json.version>
     <javax.jcr.version>1.0</javax.jcr.version>
+    <commons-lang.version>2.6</commons-lang.version>
+    <javax.servlet.version>2.5</javax.servlet.version>
+    <javax.portlet.version>2.0</javax.portlet.version>
+    <org.xwiki.rendering.version>4.1.3</org.xwiki.rendering.version>
+
   </properties>
   <dependencyManagement>
     <dependencies>
       <!-- ALL VERSIONS OF DEPENDENCIES HAVE TO BE DEFINED HERE -->
+	<dependency>
+		<groupId>org.exoplatform.core</groupId>
+		<artifactId>exo.core.component.organization.api</artifactId>
+		<version>${org.exoplatform.core.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>org.exoplatform.portal</groupId>
+		<artifactId>exo.portal.component.web.controller</artifactId>
+		<version>${org.exoplatform.portal.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>org.exoplatform.portal</groupId>
+		<artifactId>exo.portal.webui.framework</artifactId>
+		<version>${org.exoplatform.portal.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>commons-lang</groupId>
+		<artifactId>commons-lang</artifactId>
+		<version>${commons-lang.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>javax.servlet</groupId>
+		<artifactId>servlet-api</artifactId>
+		<version>${javax.servlet.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>org.exoplatform.portal</groupId>
+		<artifactId>exo.portal.component.portal</artifactId>
+		<version>${org.exoplatform.portal.version}</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>org.exoplatform.portal</groupId>
+		<artifactId>exo.portal.component.web.resources</artifactId>
+		<version>${org.exoplatform.portal.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>org.exoplatform.portal</groupId>
+		<artifactId>exo.portal.webui.portlet</artifactId>
+		<version>${org.exoplatform.portal.version}</version>
+	</dependency>	
+	<dependency>
+		<groupId>org.exoplatform.portal</groupId>
+		<artifactId>exo.portal.webui.portal</artifactId>
+		<version>${org.exoplatform.portal.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>javax.portlet</groupId>
+		<artifactId>portlet-api</artifactId>
+		<version>${javax.portlet.version}</version>
+	</dependency>
+
+	<dependency>
+		<groupId>org.exoplatform.kernel</groupId>
+		<artifactId>exo.kernel.commons</artifactId>
+		<version>${org.exoplatform.kernel.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>org.exoplatform.portal</groupId>
+		<artifactId>exo.portal.component.web.server</artifactId>
+		<version>${org.exoplatform.portal.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>javax.jcr</groupId>
+		<artifactId>jcr</artifactId>
+		<version>${javax.jcr.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>org.exoplatform.portal</groupId>
+		<artifactId>exo.portal.component.common</artifactId>
+		<version>${org.exoplatform.portal.version}</version>
+	</dependency>
+
+	<dependency>
+		<groupId>org.exoplatform.kernel</groupId>
+		<artifactId>exo.kernel.component.common</artifactId>
+		<version>${org.exoplatform.kernel.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>org.exoplatform.jcr</groupId>
+		<artifactId>exo.jcr.component.ext</artifactId>
+		<version>${org.exoplatform.jcr.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>org.exoplatform.kernel</groupId>
+		<artifactId>exo.kernel.container</artifactId>
+		<version>${org.exoplatform.kernel.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>org.exoplatform.jcr</groupId>
+		<artifactId>exo.jcr.component.core</artifactId>
+		<version>${org.exoplatform.jcr.version}</version>
+	</dependency>
+
+	<dependency>
+		<groupId>org.exoplatform.core</groupId>
+		<artifactId>exo.core.component.security.core</artifactId>
+		<version>${org.exoplatform.core.version}</version>
+	</dependency>
+
+	<dependency>
+		<groupId>org.exoplatform.wiki</groupId>
+		<artifactId>wiki-renderer</artifactId>
+		<version>${org.exoplatform.wiki.version}</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>org.xwiki.rendering</groupId>
+		<artifactId>xwiki-rendering-api</artifactId>
+		<version>${org.xwiki.rendering.version}</version>
+	</dependency>
+
+    <dependency>
+      <groupId>org.exoplatform.portal</groupId>
+      <artifactId>exo.portal.webui.core</artifactId>
+      <version>${org.exoplatform.portal.version}</version>
+    </dependency>
+    
+      <dependency>
+      <groupId>org.exoplatform.social</groupId>
+      <artifactId>social-component-core</artifactId>
+      <version>${org.exoplatform.social.version}</version>
+    </dependency>   
+    
+    <dependency>
+      <groupId>org.exoplatform.social</groupId>
+      <artifactId>social-component-webui</artifactId>
+      <version>${org.exoplatform.social.version}</version>
+    </dependency>    
+
+    <dependency>
+      <groupId>org.exoplatform.social</groupId>
+      <artifactId>social-component-common</artifactId>
+      <version>${org.exoplatform.social.version}</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.exoplatform.calendar</groupId>
+      <artifactId>calendar-service</artifactId>
+      <version>${org.exoplatform.calendar.version}</version>
+    </dependency>    
+ 
+    <dependency>
+      <groupId>org.gatein.shindig</groupId>
+      <artifactId>shindig-social-api</artifactId>
+      <version>${org.gatein.shindig.version}</version>
+    </dependency> 
+    
+		<dependency>
+			<groupId>org.exoplatform.integration</groupId>
+			<artifactId>integ-social-ecms</artifactId>
+			<version>${project.version}</version>
+		</dependency>  
+		
+ 		<dependency>
+			<groupId>org.exoplatform.ecms</groupId>
+			<artifactId>ecms-core-services</artifactId>
+			<version>${org.exoplatform.ecms.version}</version>
+		</dependency>   
+
+		<dependency>
+			<groupId>org.exoplatform.ecms</groupId>
+			<artifactId>ecms-core-webui</artifactId>
+			<version>${org.exoplatform.ecms.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.exoplatform.commons</groupId>
+			<artifactId>commons-webui-ext</artifactId>
+			<version>${org.exoplatform.commons.version}</version>
+		</dependency>
+
+   <dependency>
+      <groupId>org.exoplatform.forum</groupId>
+      <artifactId>forum-forum-service</artifactId>
+      <version>${org.exoplatform.forum.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.exoplatform.forum</groupId>
+      <artifactId>forum-answer-service</artifactId>
+      <version>${org.exoplatform.forum.version}</version>
+    </dependency>
+    
+       <dependency>
+      <groupId>org.exoplatform.forum</groupId>
+      <artifactId>forum-component-common</artifactId>
+      <version>${org.exoplatform.forum.version}</version>
+    </dependency>
+
+   	<dependency>
+      <groupId>org.exoplatform.forum</groupId>
+      <artifactId>forum-application-common</artifactId>
+      <version>${org.exoplatform.forum.version}</version>
+    </dependency>
+   
+   <dependency>
+      <groupId>org.exoplatform.forum</groupId>
+      <artifactId>forum-component-bbcode</artifactId>
+      <version>${org.exoplatform.forum.version}</version>
+    </dependency>
+    
+     <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>${org.json.version}</version>
+    </dependency>
+
+
+
+   <dependency>
+      <groupId>org.exoplatform.wiki</groupId>
+      <artifactId>wiki-service</artifactId>
+      <version>${org.exoplatform.wiki.version}</version>
+    </dependency>
+   
+    <dependency>
+      <groupId>org.exoplatform.commons</groupId> 
+      <artifactId>commons-webui-component</artifactId>
+      <version>${org.exoplatform.commons.version}</version>
+    </dependency>
+		
+	
+    
+
+
+   
     </dependencies>
   </dependencyManagement>
   <modules>
